--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,25 @@
 {
-    "name": "AubreyKodar/:pixame",
-    "description": ":pixabay api client", 
-    "keywords": [
-        "pixabay",
-        "package",
-	"pixabay api",
-	"Image api"
-    ],
-    "homepage": "https://github.com/AubreyKodar/pixame",
+    "name": "aubreykodar/pixame",
+    "description": "Pixabay php client.",
+    "keywords": ["pixabay", "image", "package"],
     "license": "MIT",
     "authors": [
         {
-            "name": ":Aubrey Kodar",
-            "email": "Hlungwaneak@protonmail.com",
-            "homepage": "http://twitter.com/aubreykodar",
-            "role": "Developer"
+            "name": "Aubrey Kodar",
+            "email": "Hlungwaneak@protonmail.com"
         }
     ],
+    "type": "project",
     "require": {
-        "php" : ">=5.3.0"
+		"php": ">=5.4",
+        "guzzlehttp/guzzle": "^6.3"
     },
-    "require-dev": {
-        "phpunit/phpunit" : "4.*"
+	"require-dev": {
+		"phpunit/phpunit": "5.2.*"
     },
-    "autoload": {
+	"autoload": {
         "psr-4": {
-            "AubreyKodar\\Pixame\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "AubreyKodar\\Pixame\\Test\\": "tests"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
+            "AubreyKodar\\pixame\\": "src/"
         }
     }
 }
